@@ -7,7 +7,6 @@ object DigIt_Main: TDigIt_Main
   ClientHeight = 812
   ClientWidth = 1411
   DesignTimePPI = 120
-  LCLVersion = '4.99.0.0'
   WindowState = wsMaximized
   OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
@@ -130,14 +129,14 @@ object DigIt_Main: TDigIt_Main
       end
       object tbCaptSep1: TToolButton
         Left = 53
-        Height = 8
+        Height = 26
         Top = 2
         Caption = 'tbCaptSep1'
         Style = tbsSeparator
       end
       object tbCaptSep2: TToolButton
         Left = 113
-        Height = 8
+        Height = 26
         Top = 2
         Caption = 'tbCaptSep2'
         Style = tbsSeparator
@@ -925,7 +924,7 @@ object DigIt_Main: TDigIt_Main
       end
       object tbSepMenu: TToolButton
         Left = 76
-        Height = 8
+        Height = 62
         Top = 0
         Caption = 'tbSepMenu'
         Style = tbsSeparator
@@ -953,7 +952,7 @@ object DigIt_Main: TDigIt_Main
       end
       object tbSepTake: TToolButton
         Left = 267
-        Height = 8
+        Height = 62
         Top = 0
         Caption = 'tbSepTake'
         Style = tbsSeparator
@@ -1006,7 +1005,7 @@ object DigIt_Main: TDigIt_Main
       Wrapable = False
       object tbSepCrop: TToolButton
         Left = 1
-        Height = 8
+        Height = 62
         Top = 0
         Caption = 'tbSepCrop'
         Style = tbsSeparator
@@ -1037,7 +1036,7 @@ object DigIt_Main: TDigIt_Main
       end
       object tbSepClear: TToolButton
         Left = 348
-        Height = 8
+        Height = 62
         Top = 0
         Caption = 'tbSepClear'
         Style = tbsSeparator
